--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/Users/daniil/Desktop/прога/Hw2.html"><img src="/Users/daniil/Desktop/прога/Hw2/pngtree-red-tool-box-open-on-a-wooden-table-image_2951500.jpg" width="30" height="30" class="d-inline-block align-top" alt="">ToolBox.Store</a>
+      <a class="navbar-brand" href="Hw2.html"><img src="Hw2/pngtree-red-tool-box-open-on-a-wooden-table-image_2951500.jpg" width="30" height="30" class="d-inline-block align-top" alt="">ToolBox.Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -30,10 +30,10 @@ body {
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/Users/daniil/Desktop/прога/Hw2.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/Users/daniil/Desktop/прога/Hw2_1.html">Store</a>
+              <a class="nav-link" href="Hw2_1.html">Store</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -62,13 +62,13 @@ body {
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="/Users/daniil/Desktop/прога/Hw2/427b8e3ad5b27ad5fd96e3075a445e19.jpeg" class="d-block w-50" alt="Смотреть" style="position: relative; left: 300px;">
+      <img src="Hw2/427b8e3ad5b27ad5fd96e3075a445e19.jpeg" class="d-block w-50" alt="Смотреть" style="position: relative; left: 300px;">
     </div>
     <div class="carousel-item">
-      <img src="/Users/daniil/Desktop/прога/Hw2/a298c0e69e9246eef0664d73f7918884.jpeg" class="d-block w-50" alt="Смотреть" style="position: relative; left: 300px;">
+      <img src="Hw2/a298c0e69e9246eef0664d73f7918884.jpeg" class="d-block w-50" alt="Смотреть" style="position: relative; left: 300px;">
     </div>
     <div class="carousel-item">
-      <img src="/Users/daniil/Desktop/прога/Hw2/10415a5b3830a1f6d13adf0893f6685d.jpeg" class="d-block w-50" alt="Смотреть" style="position: relative; left: 300px;">
+      <img src="Hw2/10415a5b3830a1f6d13adf0893f6685d.jpeg" class="d-block w-50" alt="Смотреть" style="position: relative; left: 300px;">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
