--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <link rel="stylesheet" href="hw2.css">
+    <link rel="stylesheet" href="Hw2.css">
   <title>ToolBox.Store</title>
   <meta charset="utf-8">
   <style>
