--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Hw2.html"><img src="Hw2/pngtree-red-tool-box-open-on-a-wooden-table-image_2951500.jpg" width="30" height="30" class="d-inline-block align-top" alt="">ToolBox.Store</a>
+      <a class="navbar-brand" href="index.html"><img src="Hw2/pngtree-red-tool-box-open-on-a-wooden-table-image_2951500.jpg" width="30" height="30" class="d-inline-block align-top" alt="">ToolBox.Store</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
